--- a/puhelinluettelo/package.json
+++ b/puhelinluettelo/package.json
@@ -11,6 +11,7 @@
   "author": "Mikko Karvonen",
   "license": "MIT",
   "dependencies": {
+    "morgan": "^1.9.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
