--- a/puhelinluettelo/package.json
+++ b/puhelinluettelo/package.json
@@ -12,8 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "morgan": "^1.9.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.5",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
